Fixed about page Logo hover clipping

--- a/about.css
+++ b/about.css
@@ -86,10 +86,6 @@ body {
   }
   
 
-.bg {
-  overflow-y: auto;
-  scroll-behavior: smooth;
-}
 
 .about-container {
   overflow: hidden;
