--- a/global.css
+++ b/global.css
@@ -638,6 +638,7 @@ body {
   justify-content: center;
   align-items: center;
   transition: all 0.5s ease-in-out;
+  z-index: 10000;
 }
 
 
